# federal-spend-ai

./: .dockerignore  .gitignore  CURSOR_PROMPT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
.cursor/: rules
examples/: bigpines_companion_demo.py  cursor_mcp_config.json  plugins.json  substrate_event_consumer.py
src/federalspendai/: __init__.py  cli.py  config.py  http_client.py
src/federalspendai/analytics/: __init__.py  anomaly.py  anomaly_store.py  effects.py  investigation.py
src/federalspendai/data/: ckan.py  download.py  ingest.py  normalize.py  schema.py  store.py
src/federalspendai/embeddings/: __init__.py  hybrid.py  index.py
src/federalspendai/engine/: __init__.py  pipeline.py  runner.py  state.py
src/federalspendai/graphs/: __init__.py  builder.py  export.py  tracer.py
src/federalspendai/mcp/: envelope.py  host.py  server.py  tools_registry.py
src/federalspendai/nlp/: __init__.py  blackstone_ner.py  embed.py  models.py  normalize.py  pipeline.py  risk.py  spacy_ner.py
src/federalspendai/plugins/: __init__.py  base.py  builtin.py  mcp_proxy.py  registry.py
src/federalspendai/substrate/: __init__.py  events.py  experience.py  schemas.py
src/federalspendai/tools/: __init__.py  (+8 more)
tests/: __init__.py  test_anomaly.py  test_cli.py  test_companion_demo.py  test_download.py  test_embeddings.py  test_engine.py  test_experience.py  test_graphs.py  test_nlp_pipeline.py  test_nlp_risk.py  test_normalize.py  test_public_accounts.py  test_store.py  test_substrate.py
tests/fixtures/: awards.csv  public_accounts.csv
(+2 files in other folders)
