[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "federalspendai"
version = "0.1.0"
description = "Open-source Canadian federal spending analysis with MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "duckdb>=1.1",
    "fastmcp>=2.0",
    "httpx>=0.27",
    "networkx>=3.2",
    "polars>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "scikit-learn>=1.4",
    "sentence-transformers>=3.0",
    "spacy>=3.7",
    "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
federalspendai = "federalspendai.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/federalspendai"]

[tool.hatch.build.targets.sdist]
include = ["src/federalspendai", "tests", "examples", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
